syntax = "proto3";

package users;

service UsersService {
  rpc CreateUser (CreateUserRequest) returns (CreateUserResponse) {}
  rpc GetUser (GetUserRequest) returns (GetUserResponse) {}
  rpc GetUsers (GetUsersRequest) returns (GetUsersResponse) {}
  rpc UpdateUser (UpdateUserRequest) returns (UpdateUserResponse) {}
  rpc DeleteUser (DeleteUserRequest) returns (DeleteUserResponse) {}
  rpc UploadFile (FileUploadRequest) returns (FileUploadResponse) {}
  rpc DownloadFile (DownloadFileRequest) returns (DownloadFileResponse) {}
}

message CreateUserRequest {
  string name = 1;
  int32 age = 2;
}

message CreateUserResponse {
  int32 status = 1;
  repeated string error = 2;
  int32 id = 3;
}

message FindUserData {
  int32 id = 1;
  string name = 2;
  int32  age = 3;
}

message GetUserRequest {
  int32 id = 1;
}

message GetUserResponse {
  int32 status = 1;
  repeated string error = 2;
  FindUserData data = 3;
}

message DeleteUserRequest {
  int32 id = 1;
}

message DeleteUserResponse {
  int32 status = 1;
}

message UpdateUserRequest {
  int32 id = 1;
  string name = 2;
  int32 age = 3;
}
message UpdateUserResponse {
  int32 status = 1;
}

message FileUploadRequest {
  bytes image = 1;
  string originalName = 2;
}

message FileUploadResponse {
  string name = 1;
  string status = 2;
}

message DownloadFileRequest {
  int32 name = 1;
}

message DownloadFileResponse {
  string data = 1;
}

message GetUsersRequest {
  string status = 1;
}

message GetUsersResponse {
  string data = 1;
}